--- a/main.css
+++ b/main.css
@@ -129,7 +129,7 @@ label {
     display: grid;
     grid-template-columns: 1fr;
     width: 100%;
-    max-height: 100vh;
+    /* max-height: 100vh; */
     overflow: hidden;
   }
   .header-mobile {
